<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cl.uchile.ing.adi.upagos.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/layout_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:gravity="center">
        <EditText android:id="@+id/edittext"
                  android:layout_width="wrap_content"
                  android:layout_height="60dp"
                  android:hint="@string/hint_rut"
                    android:textAlignment="textEnd"
                  android:inputType="number"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentStart="true"
                  android:layout_toStartOf="@+id/dv"/>

        <TextView android:id="@+id/dv"
                  android:layout_width="45dp"
                  android:layout_height="60dp"
                  android:text="@string/hint_dv"
                  android:textSize="16sp"
                  android:gravity="center"
                  android:textAlignment="center"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentEnd="true"/>

    </RelativeLayout>


    <Button android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_verify"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/last_check"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_check"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/last_found"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_found"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_explanation"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/registered_explanation"/>

</LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.design.widget.CoordinatorLayout>
